CSS tweaks, fixed right whitespace and carousel button bug

--- a/client/src/web/components/ImageLanding/ImageLanding.scss
+++ b/client/src/web/components/ImageLanding/ImageLanding.scss
@@ -3,8 +3,7 @@
   height:450px;
   background-image:url("https://i.imgur.com/fX5p74Z.jpg");
   background-size:cover;
-  width:100%;
-  padding:2%;
+  padding:7%;
 }
 
 .landing p{
@@ -12,12 +11,4 @@
   color:#FFF;
 }
 
-.leftheader{
-  font-size:270%;
-  font-weight:500;
-}
 
-.leftpara{
-  margin-top:3%;
-  font-size:110%;
-}
